nav align fix + black color font fix

--- a/main.css
+++ b/main.css
@@ -153,7 +153,7 @@
             display: flex;
             flex-direction: row;
             justify-content: flex-start;
-            align-items: flex-start;
+            align-items: center;
             width: 100%;
         }
         
@@ -178,7 +178,6 @@
             flex-direction: row;
             justify-content: center;
             align-items: center;
-            margin-top:1rem;
         }
         
         .navbar ul li {
@@ -274,11 +273,11 @@
         }
 
         .features-section{
+            color: var(--info-section-header-text-color);
             display:flex;
             flex-direction:column;
             justify-content:center;
             align-items:center;
-
         }
 
         .features-content{
@@ -836,7 +835,7 @@ label, input, textarea {
 .about-hero-text h1 {
     font-size: var(--hero-main-text-font-size);
     font-weight: var(--hero-main-text-font-weight);
-    color: var(--about-hero-main-text-color);
+    color: var(--info-section-header-text-color);
     margin-bottom:0.5rem;
 }
 
@@ -868,6 +867,7 @@ label, input, textarea {
 }
 .about-main{
     min-width: 100%;
+    color: var(--info-section-header-text-color);
 }
  
 
